improve lexer add tests